# MatrixClass

./: CMakeLists.txt  DimensionMismatchError.h  DivideByZeroError.cpp  DivideByZeroError.h  Matrix.cpp  Matrix.h  MatrixDimensionMismatchError.cpp  MatrixDimensionMismatchError.h  MatrixError.cpp  MatrixError.h  MatrixInnerDimensionMismatchError.cpp  MatrixInnerDimensionMismatchError.h  MatrixOutOfBoundsError.cpp  MatrixOutOfBoundsError.h  OutOfBoundsError.h  Vector.cpp  Vector.h  VectorDimensionMismatchError.cpp  VectorDimensionMismatchError.h  VectorOutOfBoundsError.cpp  VectorOutOfBoundsError.h
